--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,8 @@
-
+<header>
+    <h1><a href="/">{{ site.title }}</a></h1>
+    <nav>
+        <a href="/">首页</a>
+        <a href="/about">关于</a>
+        <a href="/posts">Java记录</a>
+    </nav>
+</header>
