--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,5 +4,9 @@
         <a href="/">首页</a>
         <a href="/about">关于</a>
         <a href="/posts">Java记录</a>
+  {% for category in site.categories %}
+    <a href="/{{ category.slug }}">{{ category.title }}</a>
+  {% endfor %}
+
     </nav>
 </header>
