--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,13 @@
-<header>
-    <h1><a href="/">{{ site.title }}</a></h1>
-    <nav>
-        <a href="/">首页</a>
-        <a href="/about">关于</a>
-        <a href="/posts">Java记录</a>
-  {% for category in site.categories %}
-    <a href="/{{ category.slug }}">{{ category.title }}</a>
-  {% endfor %}
-
+<header class="site-header">
+  <div class="wrapper">
+    <a class="site-title" href="/">{{ site.title }}</a>
+    <nav class="site-nav">
+      {% for link in site.navigation %}
+        <a href="{{ link.url }}" 
+           {% if page.url == link.url %}class="active"{% endif %}>
+          {{ link.title }}
+        </a>
+      {% endfor %}
     </nav>
+  </div>
 </header>
