--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,15 @@
-{% raw %}
 ---
 layout: default
 ---
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <header>
+    <h1>{{ page.title }}</h1>
+    <div class="post-date">
+      发布日期: {{ page.date | date: "%Y-%m-%d" }}
+    </div>
+  </header>
   
-  <!-- 目录容器 -->
-  <aside class="toc">
-    <h3>目录</h3>
-    {% include toc.html html=content %}
-  </aside>
-
-  <!-- 文章内容 -->
-  <div class="content">
+  <div class="post-content">
     {{ content }}
   </div>
 </article>
-{% endraw %}
