--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,15 @@
 layout: default
 ---
 <article class="post">
-  <header>
-    <h1>{{ page.title }}</h1>
-    <div class="post-date">
-      发布日期: {{ page.date | date: "%Y-%m-%d" }}
-    </div>
-  </header>
-  
+  <aside class="toc-wrapper">
+    {% include toc.html html=content %}
+  </aside>
   <div class="post-content">
+    <h1>{{ page.title }}</h1>
+    <div class="meta">
+      <span>{{ page.date | date: "%Y-%m-%d" }}</span>
+      <span>分类: {{ page.category }}</span>
+    </div>
     {{ content }}
   </div>
 </article>
