--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <header class="site-header">
-  <div class="wrapper">
-    <a class="site-title" href="/">{{ site.title }}</a>
-    <nav>
-  {% for item in site.navigation %}
-    <a href="{{ item.url }}" 
-       {% if page.url == item.url %}class="active"{% endif %}>
-      {{ item.title }}
-    </a>
-  {% endfor %}
-</nav>
+  <div class="header-container">
+    <h1 class="site-title">{{ site.title }}</h1>
+    <nav class="main-nav">
+      {% for link in site.navigation %}
+        <a href="{{ link.url }}" 
+           {% if page.url == link.url %}class="active"{% endif %}>
+          {{ link.title }}
+        </a>
+      {% endfor %}
+    </nav>
   </div>
 </header>
