--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,18 @@
 ---
-layout: default
+layout: default  # 确保继承基础布局
 ---
 <article class="post">
   <aside class="toc-wrapper">
-    {% include toc.html html=content %}
+    {% include toc.html html=content %}  <!-- 需确认toc.html存在 -->
   </aside>
   <div class="post-content">
-    <h1>{{ page.title }}</h1>
-    <div class="meta">
-      <span>{{ page.date | date: "%Y-%m-%d" }}</span>
-      <span>分类: {{ page.category }}</span>
+    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="post-meta">
+      <time>{{ page.date | date: "%Y-%m-%d" }}</time>
+      <span class="post-category">{{ page.category }}</span>
     </div>
-    {{ content }}
+    <div class="post-body">
+      {{ content }}
+    </div>
   </div>
 </article>
